fix footer spacing

--- a/styles/about-me.css
+++ b/styles/about-me.css
@@ -102,7 +102,7 @@ body {
 }
 
 li {
-  padding-right: 1em;
+  padding-right: 3em;
 }
 
 .logo {
